--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,48 +1,26 @@
 .container {
     display: flex;
     flex-direction: row;
-    font-family: Consolas, monospace
-}
-
-.content {
-    display: flex;
-    flex-direction: column;
-
+    align-items: center;
+    justify-content: center;
+    font-family: Consolas, monospace;
+    margin-bottom: 1.5%;
 }
 
 .h1 {
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 0.2%
+    font-size: 24px;
+
 }
 
 .h2 {
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 0.2%
-}
-
-.h3 {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 0.2%
-}
-
-.h4 {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 0.2%
-}
-
-.h5 {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 0.2%
+    margin-top: 0.2%;
+    font-size: 24px;
 }
 
 .h-center {
